# inky

./: Cargo.toml  Embed.toml  README.md  image_data.txt
.cargo/: config.toml
src/: clock.rs  image_data.rs  lib.rs  main.rs  paint.rs  spi0.rs  timer.rs  watchdog.rs
