[package]
name = "inky"
version = "0.1.0"
edition = "2024"
test = false
doctest = false
bench = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
once_cell = { version = "1.21.3", default-features = false, features = ["critical-section"] }
panic-halt = "1.0.0"
rp235x-hal = { version = "0.3.0", features = ["critical-section-impl", "defmt"] }
spin = "0.10.0"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[[bin]]
name = "inky"
path = "src/main.rs"
test = false
doctest = false
bench = false
